# yet-another-ai-agent

./: LICENSE  README.md  devplan.md
backend/: .gitignore  README.md  pyproject.toml
backend/src/agent_backend/: __init__.py  config.py  core.py  server.py
backend/src/agent_backend/api/: chat.py  health.py
backend/src/agent_backend/helper/: connection_manager.py
backend/src/agent_backend/routes/: chat.py
backend/src/agent_backend/services/: llm.py
backend/src/resources/: config.local.yaml  config.yaml
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: Chat.jsx
frontend/src/lib/: api.js
