[project]
name = "agent-backend"
version = "0.1.0"
description = "Backend for an ai agent"
readme = "README.md"
authors = [
    { name = "riteshkhatri08", email = "riteshkhatri1512@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.0",
    "uvicorn>=0.37.0",
    "websockets>=15.0.1",
    "httpx>=0.27.0",
]

[project.scripts]
agent-backend = "agent_backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Package discovery configuration
[tool.hatch.build.targets.wheel]
packages = ["src/agent_backend"]

# Development and organization tools
[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

# Import organization
[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src"]

# Type checking
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
